--- a/public/passwords.html
+++ b/public/passwords.html
@@ -27,6 +27,17 @@
       z-index: 2000; color: #fff; font-size: 1.2rem;
     }
     #pageContent { display: none; }
+
+    /* 🎨 تحسين شكل التولتيب */
+    .custom-tooltip.bs-tooltip-auto[x-placement^=top],
+    .custom-tooltip.bs-tooltip-top {
+      --bs-tooltip-bg: #0d6efd;  /* خلفية زرقاء */
+      --bs-tooltip-color: #fff;  /* النص أبيض */
+      font-size: 0.85rem;
+      padding: 6px 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
   </style>
 </head>
 <body>
@@ -182,13 +193,13 @@ function renderPasswords(list) {
       <td>
         <div class="d-flex align-items-center">
           <input type="password" value="${p.password}" class="form-control form-control-sm me-2 pw-field" readonly>
-          <button class="btn btn-sm btn-outline-secondary toggle-pw"><i class="bi bi-eye"></i></button>
-          <button class="btn btn-sm btn-outline-success ms-1 copy-pw"><i class="bi bi-clipboard"></i></button>
+          <button class="btn btn-sm btn-outline-secondary toggle-pw" data-bs-toggle="tooltip" title="إظهار كلمة المرور"><i class="bi bi-eye"></i></button>
+          <button class="btn btn-sm btn-outline-success ms-1 copy-pw" data-bs-toggle="tooltip" title="نسخ كلمة المرور"><i class="bi bi-clipboard"></i></button>
         </div>
       </td>
       <td>
-        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
-        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')">🗑️ حذف</button>
+        <button class="btn btn-primary btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')" data-bs-toggle="tooltip" title="تعديل">✏️ تعديل</button>
+        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')" data-bs-toggle="tooltip" title="حذف">🗑️ حذف</button>
       </td>`;
     table.appendChild(tr);
   });
@@ -260,6 +271,20 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
 document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_passwords");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
 document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
+
+// ✅ تفعيل جميع الـ Tooltips بشكل احترافي
+document.addEventListener("DOMContentLoaded", () => {
+  const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
+  tooltipTriggerList.forEach(el => {
+    new bootstrap.Tooltip(el, {
+      trigger: 'hover focus',
+      placement: 'top',
+      fallbackPlacements: ['bottom', 'left', 'right'],
+      delay: { show: 300, hide: 150 },
+      customClass: 'custom-tooltip'
+    });
+  });
+});
 </script>
 </body>
 </html>
