--- a/public/backups.html
+++ b/public/backups.html
@@ -2,13 +2,17 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>النسخ الاحتياطية</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <style>
     body {
       background-color: #f8f9fa;
-      padding: 40px;
       font-family: 'Segoe UI', sans-serif;
+      transition: background 0.3s, color 0.3s;
+      font-size:16px;
+      padding:20px;
     }
     .backup-card {
       background: white;
@@ -27,81 +31,97 @@
       margin-top: 5px;
       color: #555;
     }
-    /* ✅ توست أعلى الصفحة في الوسط */
     .toast-container {
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
       z-index: 2000;
     }
-    #pageContent { display: none; }
+    body.dark-mode { background-color: #121212; color: #eaeaea; }
+    body.dark-mode .backup-card { background: #1e1e1e; color: #ddd; }
+    body.dark-mode .table-dark { background-color: #333 !important; }
+    body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
+    body.dark-mode .btn-close { filter: invert(1); }
+    .custom-tooltip.bs-tooltip-auto[x-placement^=top],
+    .custom-tooltip.bs-tooltip-top {
+      --bs-tooltip-bg: #0d6efd;
+      --bs-tooltip-color: #fff;
+      font-size: 0.85rem;
+      padding: 6px 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
   </style>
 </head>
 <body>
-  <div class="container" id="pageContent">
-    <div class="d-flex justify-content-between align-items-center mb-4">
-      <h3>🗄️ النسخ الاحتياطية</h3>
-      <a href="dashboard.html" class="btn btn-outline-info" data-bs-toggle="tooltip" title="العودة إلى لوحة التحكم">لوحة التحكم</a>
+
+<!-- ✅ محتوى الصفحة -->
+<div id="pageContent">
+
+  <!-- أزرار علوية -->
+  <div class="d-flex justify-content-between mb-3 mt-3">
+    <div>
+      <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
+      <button id="dashboardBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
     </div>
+    <div>
+      <button id="themeToggle" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="الوضع الليلي/النهاري"><i class="bi bi-moon-stars-fill"></i></button>
+    </div>
+  </div>
+
+  <div class="container">
+    <h3 class="mb-4">📂 النسخ الاحتياطية</h3>
 
     <div class="d-flex gap-2 mb-3 flex-wrap">
-      <button class="btn btn-primary" onclick="createBackup()" data-bs-toggle="tooltip" title="إنشاء نسخة احتياطية جديدة">📥 إنشاء نسخة احتياطية</button>
+      <button class="btn btn-primary" onclick="createBackup()" data-bs-toggle="tooltip" title="إنشاء نسخة جديدة">📥 إنشاء نسخة احتياطية</button>
       <button class="btn btn-danger" onclick="deleteSelected()" data-bs-toggle="tooltip" title="حذف النسخ المحددة">🗑️ حذف المحدد</button>
 
-      <!-- ✅ زر رفع نسخة -->
       <form id="uploadForm" enctype="multipart/form-data" class="d-flex gap-2">
-        <input type="file" id="backupFile" name="backupFile" accept=".json" class="form-control" data-bs-toggle="tooltip" title="اختر ملف نسخة احتياطية بصيغة JSON">
-        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="رفع وحفظ نسخة احتياطية من جهازك">📤 رفع نسخة</button>
+        <input type="file" id="backupFile" name="backupFile" accept=".json" class="form-control" data-bs-toggle="tooltip" title="اختر ملف نسخة JSON">
+        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="رفع نسخة احتياطية">📤 رفع نسخة</button>
       </form>
     </div>
 
     <div class="form-check mb-3">
-      <input class="form-check-input" type="checkbox" id="selectAll" onchange="toggleSelectAll(this)" data-bs-toggle="tooltip" title="تحديد أو إلغاء تحديد جميع النسخ">
+      <input class="form-check-input" type="checkbox" id="selectAll" onchange="toggleSelectAll(this)" data-bs-toggle="tooltip" title="تحديد أو إلغاء تحديد الكل">
       <label class="form-check-label" for="selectAll">تحديد الكل</label>
     </div>
 
     <div id="summary" class="mb-3 text-muted"></div>
     <div id="backupList"></div>
   </div>
+</div>
 
-  <!-- ✅ مودال تسجيل الدخول سيتم تحميله هنا -->
-  <div id="loginModalContainer"></div>
+<!-- ✅ مودال تسجيل الدخول -->
+<div id="loginModalContainer"></div>
 
-  <!-- ✅ Toast Container -->
-  <div class="toast-container position-fixed"></div>
+<!-- ✅ Toast Container -->
+<div class="toast-container position-fixed"></div>
 
-  <!-- ✅ Modal للتأكيد -->
-  <div class="modal fade" id="confirmModal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">تأكيد العملية</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-        </div>
-        <div class="modal-body" id="confirmMessage">هل أنت متأكد؟</div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
-          <button type="button" class="btn btn-primary" id="confirmOkBtn">موافق</button>
-        </div>
+<!-- ✅ Modal للتأكيد -->
+<div class="modal fade" id="confirmModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">تأكيد العملية</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body" id="confirmMessage">هل أنت متأكد؟</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+        <button type="button" class="btn btn-primary" id="confirmOkBtn">موافق</button>
       </div>
     </div>
   </div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<!-- ✅ استدعاء الحماية -->
 <script src="login-guard.js"></script>
 
 <script>
 let backups = [];
 let confirmCallback = null;
 
-// ✅ تفعيل التولتيب بشكل عام
-document.addEventListener("DOMContentLoaded", () => {
-  const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-  tooltipTriggerList.forEach(el => new bootstrap.Tooltip(el));
-});
-
-// ✅ دالة لعرض التوست
 function showToast(message, type="success") {
   const container = document.querySelector('.toast-container');
   const toastEl = document.createElement('div');
@@ -111,15 +131,12 @@ function showToast(message, type="success") {
     <div class="d-flex">
       <div class="toast-body">${message}</div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
-    </div>
-  `;
+    </div>`;
   container.appendChild(toastEl);
-  const bsToast = new bootstrap.Toast(toastEl, { delay: 3000 });
-  bsToast.show();
+  new bootstrap.Toast(toastEl, { delay: 3000 }).show();
   toastEl.addEventListener("hidden.bs.toast", () => toastEl.remove());
 }
 
-// ✅ دالة لعرض مودال التأكيد
 function showConfirm(message, callback) {
   document.getElementById("confirmMessage").innerText = message;
   confirmCallback = callback;
@@ -149,7 +166,6 @@ function renderBackups() {
   }
 
   let totalSize = 0;
-
   backups.forEach((b, index) => {
     const dateText = new Date(b.date).toLocaleString('ar-EG', { dateStyle: 'full', timeStyle: 'short' });
     const sizeKB = (
@@ -172,24 +188,17 @@ function renderBackups() {
         <div class="details">📹 فيديوهات: ${videoCount} | 🔗 روابط: ${linkCount} | 🔑 كلمات مرور: ${passCount} | 🗂️ أقسام: ${deptCount}</div>
       </div>
       <div class="d-flex gap-2">
-        <a class="btn btn-success btn-sm" href="/api/backups/download/${b._id}" data-bs-toggle="tooltip" title="تنزيل هذه النسخة الاحتياطية">⬇️ تنزيل</a>
-        <button class="btn btn-warning btn-sm" onclick="restoreBackup('${b._id}')" data-bs-toggle="tooltip" title="استرجاع البيانات من هذه النسخة">♻️ استرجاع</button>
-      </div>
-    `;
+        <a class="btn btn-success btn-sm" href="/api/backups/download/${b._id}" data-bs-toggle="tooltip" title="تنزيل النسخة">⬇️ تنزيل</a>
+        <button class="btn btn-warning btn-sm" onclick="restoreBackup('${b._id}')" data-bs-toggle="tooltip" title="استرجاع النسخة">♻️ استرجاع</button>
+      </div>`;
     container.appendChild(card);
   });
-
-  // ✅ إعادة تفعيل التولتيب للنسخ الجديدة
-  const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-  tooltipTriggerList.forEach(el => new bootstrap.Tooltip(el));
 
   summary.innerHTML = `عدد النسخ: ${backups.length} – الحجم الكلي: ${totalSize.toFixed(2)} KB`;
 }
 
 function toggleSelectAll(source) {
-  document.querySelectorAll('.backup-check').forEach(cb => {
-    cb.checked = source.checked;
-  });
+  document.querySelectorAll('.backup-check').forEach(cb => { cb.checked = source.checked; });
 }
 
 async function deleteSelected() {
@@ -217,14 +226,13 @@ async function createBackup() {
 }
 
 async function restoreBackup(id) {
-  showConfirm("⚠️ سيتم استبدال البيانات الحالية. هل تريد المتابعة؟", async () => {
+  showConfirm("هل تريد استرجاع هذه النسخة إلى قاعدة البيانات؟", async () => {
     const res = await fetch(`/api/backups/restore/${id}`, { method: 'POST' });
     const result = await res.json();
     showToast(result.message || '♻️ تم استرجاع النسخة الاحتياطية', "info");
   });
 }
 
-// ✅ رفع نسخة من الجهاز
 document.getElementById("uploadForm").addEventListener("submit", async (e) => {
   e.preventDefault();
   const fileInput = document.getElementById("backupFile");
@@ -237,23 +245,32 @@ document.getElementById("uploadForm").addEventListener("submit", async (e) => {
   formData.append("backupFile", fileInput.files[0]);
 
   try {
-    const res = await fetch("/api/backups/upload", {
-      method: "POST",
-      body: formData
-    });
+    const res = await fetch("/api/backups/upload", { method: "POST", body: formData });
     const result = await res.json();
     showToast(result.message || "✅ تم رفع النسخة وحفظها بنجاح");
     await fetchBackups();
-  } catch (err) {
+  } catch {
     showToast("❌ فشل رفع النسخة", "danger");
   }
 });
 
-// ✅ عند نجاح تسجيل الدخول → نفذ fetchBackups
+// ✅ أزرار أعلى الصفحة
+document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
+document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_backups");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
+document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
+
+// ✅ تفعيل Tooltips
 document.addEventListener("DOMContentLoaded", () => {
-  setTimeout(() => {
-    fetchBackups();
-  }, 500);
+  fetchBackups();
+  const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  tooltipTriggerList.forEach(el => {
+    new bootstrap.Tooltip(el, {
+      trigger: 'hover focus',
+      placement: 'top',
+      delay: { show: 300, hide: 150 },
+      customClass: 'custom-tooltip'
+    });
+  });
 });
 </script>
 </body>
