--- a/public/backups.html
+++ b/public/backups.html
@@ -6,60 +6,45 @@
   <title>النسخ الاحتياطية</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <style>
-    body {
-      background-color: #f8f9fa;
-      font-family: 'Segoe UI', sans-serif;
-      transition: background 0.3s, color 0.3s;
-      font-size:16px;
-      padding:20px;
-    }
-    .backup-card {
-      background: white;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-      margin-bottom: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-    .details {
-      font-size: 0.85rem;
-      margin-top: 5px;
-      color: #555;
-    }
-    .toast-container {
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 2000;
-    }
-    body.dark-mode { background-color: #121212; color: #eaeaea; }
-    body.dark-mode .backup-card { background: #1e1e1e; color: #ddd; }
-    body.dark-mode .table-dark { background-color: #333 !important; }
-    body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
-    body.dark-mode .btn-close { filter: invert(1); }
-    .custom-tooltip.bs-tooltip-auto[x-placement^=top],
-    .custom-tooltip.bs-tooltip-top {
-      --bs-tooltip-bg: #0d6efd;
-      --bs-tooltip-color: #fff;
-      font-size: 0.85rem;
-      padding: 6px 10px;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-    }
-    /* ✅ شاشة التحميل */
-    #loadingOverlay {
-      position: fixed; top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5);
-      display: none; align-items: center; justify-content: center; flex-direction: column;
-      z-index: 3000; color: #fff; font-size: 1.2rem;
-    }
-  </style>
+  <!-- شاشة التحميل -->
+<div id="loadingOverlay">
+  <div class="loader-box text-center">
+    <div class="spinner-border text-light mb-3" role="status" style="width:3.5rem; height:3.5rem;"></div>
+    <p class="loading-text">⏳ جاري التحميل...</p>
+  </div>
+</div>
+
+<style>
+  /* ✅ تحسين شاشة التحميل */
+  #loadingOverlay {
+    position: fixed; top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(135deg, rgba(0,0,0,0.85), rgba(33,37,41,0.9));
+    display: none; align-items: center; justify-content: center;
+    z-index: 3000; color: #fff;
+  }
+  .loader-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: fadeIn 0.6s ease-in-out;
+  }
+  .loading-text {
+    font-size: 1.3rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    animation: glow 1.5s ease-in-out infinite alternate;
+  }
+  @keyframes glow {
+    from { text-shadow: 0 0 5px #0d6efd, 0 0 10px #0d6efd; }
+    to   { text-shadow: 0 0 15px #0d6efd, 0 0 25px #0d6efd; }
+  }
+  @keyframes fadeIn {
+    from { opacity: 0; transform: scale(0.9); }
+    to   { opacity: 1; transform: scale(1); }
+  }
+</style>
+
 </head>
 <body>
 
