--- a/public/backups.html
+++ b/public/backups.html
@@ -10,7 +10,7 @@
 <div id="loadingOverlay">
   <div class="loader-box text-center">
     <div class="spinner-border text-light mb-3" role="status" style="width:3.5rem; height:3.5rem;"></div>
-    <p class="loading-text">⏳ جاري التحميل...</p>
+    <p class="loading-text"> جاري التحميل...⏳</p>
   </div>
 </div>
 
