--- a/public/backups.html
+++ b/public/backups.html
@@ -1,45 +1,309 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>النسخ الاحتياطية</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <style>
+    body {
+      background-color: #f8f9fa;
+      font-family: 'Segoe UI', sans-serif;
+      transition: background 0.3s, color 0.3s;
+      font-size:16px;
+      padding:20px;
+    }
+    .backup-card {
+      background: white;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+    .details {
+      font-size: 0.85rem;
+      margin-top: 5px;
+      color: #555;
+    }
+    .toast-container {
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2000;
+    }
+    body.dark-mode { background-color: #121212; color: #eaeaea; }
+    body.dark-mode .backup-card { background: #1e1e1e; color: #ddd; }
+    body.dark-mode .table-dark { background-color: #333 !important; }
+    body.dark-mode .modal-content { background: #1e1e1e; color: #fff; }
+    body.dark-mode .btn-close { filter: invert(1); }
+    .custom-tooltip.bs-tooltip-auto[x-placement^=top],
+    .custom-tooltip.bs-tooltip-top {
+      --bs-tooltip-bg: #0d6efd;
+      --bs-tooltip-color: #fff;
+      font-size: 0.85rem;
+      padding: 6px 10px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+    /* ✅ شاشة التحميل */
+    #loadingOverlay {
+      position: fixed; top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5);
+      display: none; align-items: center; justify-content: center; flex-direction: column;
+      z-index: 3000; color: #fff; font-size: 1.2rem;
+    }
+  </style>
+</head>
+<body>
+
+<!-- شاشة التحميل -->
 <div id="loadingOverlay">
-  <div class="dots-loader">
-    <span></span><span></span><span></span>
-  </div>
-  <p class="loading-text">⏳ جاري التحميل...</p>
+  <div class="spinner-border text-light" role="status" style="width:3rem; height:3rem;"></div>
+  <p class="mt-3"> جاري التحميل...⏳</p>
 </div>
 
-<style>
-  #loadingOverlay {
-    position: fixed; top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: linear-gradient(135deg, rgba(0,0,0,0.85), rgba(33,37,41,0.9));
-    display: none; align-items: center; justify-content: center;
-    flex-direction: column;
-    z-index: 3000; color: #fff;
-  }
-  .dots-loader {
-    display: flex; gap: 8px; margin-bottom: 15px;
-  }
-  .dots-loader span {
-    width: 12px; height: 12px;
-    background: #0d6efd;
-    border-radius: 50%;
-    display: inline-block;
-    animation: bounce 1.4s infinite ease-in-out both;
-  }
-  .dots-loader span:nth-child(1) { animation-delay: -0.32s; }
-  .dots-loader span:nth-child(2) { animation-delay: -0.16s; }
-  .dots-loader span:nth-child(3) { animation-delay: 0; }
+<!-- ✅ محتوى الصفحة -->
+<div id="pageContent">
 
-  @keyframes bounce {
-    0%, 80%, 100% { transform: scale(0); }
-    40% { transform: scale(1); }
+  <!-- أزرار علوية -->
+  <div class="d-flex justify-content-between mb-3 mt-3">
+    <div>
+      <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
+      <button id="dashboardBtn" class="btn btn-secondary" data-bs-toggle="tooltip" title="العودة للوحة التحكم"><i class="bi bi-speedometer2"></i></button>
+    </div>
+    <div>
+      <button id="themeToggle" class="btn btn-outline-dark" data-bs-toggle="tooltip" title="الوضع الليلي/النهاري"><i class="bi bi-moon-stars-fill"></i></button>
+    </div>
+  </div>
+
+  <div class="container">
+    <h3 class="mb-4">📂 النسخ الاحتياطية</h3>
+
+    <div class="d-flex gap-2 mb-3 flex-wrap">
+      <button class="btn btn-primary" onclick="createBackup()" data-bs-toggle="tooltip" title="إنشاء نسخة جديدة">📥 إنشاء نسخة احتياطية</button>
+      <button class="btn btn-danger" onclick="deleteSelected()" data-bs-toggle="tooltip" title="حذف النسخ المحددة">🗑️ حذف المحدد</button>
+
+      <form id="uploadForm" enctype="multipart/form-data" class="d-flex gap-2">
+        <input type="file" id="backupFile" name="backupFile" accept=".json" class="form-control" data-bs-toggle="tooltip" title="اختر ملف نسخة JSON">
+        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" title="رفع نسخة احتياطية">📤 رفع نسخة</button>
+      </form>
+    </div>
+
+    <div class="form-check mb-3">
+      <input class="form-check-input" type="checkbox" id="selectAll" onchange="toggleSelectAll(this)" data-bs-toggle="tooltip" title="تحديد أو إلغاء تحديد الكل">
+      <label class="form-check-label" for="selectAll">تحديد الكل</label>
+    </div>
+
+    <div id="summary" class="mb-3 text-muted"></div>
+    <div id="backupList"></div>
+  </div>
+</div>
+
+<!-- ✅ مودال تسجيل الدخول -->
+<div id="loginModalContainer"></div>
+
+<!-- ✅ Toast Container -->
+<div class="toast-container position-fixed"></div>
+
+<!-- ✅ Modal للتأكيد -->
+<div class="modal fade" id="confirmModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">تأكيد العملية</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body" id="confirmMessage">هل أنت متأكد؟</div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+        <button type="button" class="btn btn-primary" id="confirmOkBtn">موافق</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="login-guard.js"></script>
+
+<script>
+let backups = [];
+let confirmCallback = null;
+
+function showToast(message, type="success") {
+  const container = document.querySelector('.toast-container');
+  const toastEl = document.createElement('div');
+  toastEl.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
+  toastEl.role = "alert";
+  toastEl.innerHTML = `
+    <div class="d-flex">
+      <div class="toast-body">${message}</div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+    </div>`;
+  container.appendChild(toastEl);
+  new bootstrap.Toast(toastEl, { delay: 3000 }).show();
+  toastEl.addEventListener("hidden.bs.toast", () => toastEl.remove());
+}
+
+function showConfirm(message, callback) {
+  document.getElementById("confirmMessage").innerText = message;
+  confirmCallback = callback;
+  new bootstrap.Modal(document.getElementById("confirmModal")).show();
+}
+
+document.getElementById("confirmOkBtn").addEventListener("click", () => {
+  if (confirmCallback) confirmCallback();
+  bootstrap.Modal.getInstance(document.getElementById("confirmModal")).hide();
+});
+
+async function fetchBackups() {
+  document.getElementById("loadingOverlay").style.display = "flex"; // ✅ إظهار التحميل
+  try {
+    const res = await fetch('/api/backups');
+    backups = await res.json();
+    renderBackups();
+  } catch {
+    showToast("❌ فشل في جلب النسخ الاحتياطية","danger");
+  } finally {
+    document.getElementById("loadingOverlay").style.display = "none"; // ✅ إخفاء التحميل
+  }
+}
+
+function renderBackups() {
+  const container = document.getElementById('backupList');
+  const summary = document.getElementById('summary');
+  container.innerHTML = '';
+
+  if (backups.length === 0) {
+    container.innerHTML = '<div class="alert alert-info text-center">لا توجد نسخ احتياطية حالياً.</div>';
+    summary.innerHTML = '';
+    return;
   }
 
-  .loading-text {
-    font-size: 1.2rem;
-    font-weight: bold;
-    animation: glow 1.5s ease-in-out infinite alternate;
+  let totalSize = 0;
+  backups.forEach((b, index) => {
+    const dateText = new Date(b.date).toLocaleString('ar-EG', { dateStyle: 'full', timeStyle: 'short' });
+    const sizeKB = (
+      (JSON.stringify(b.videos || []).length + JSON.stringify(b.links || []).length + JSON.stringify(b.passwords || []).length + JSON.stringify(b.departments || []).length) / 1024
+    ).toFixed(2);
+    totalSize += parseFloat(sizeKB);
+
+    const videoCount = (b.videos || []).length;
+    const linkCount = (b.links || []).length;
+    const passCount = (b.passwords || []).length;
+    const deptCount = (b.departments || []).length;
+
+    const card = document.createElement('div');
+    card.className = 'backup-card';
+    card.innerHTML = `
+      <div>
+        <input type="checkbox" class="backup-check" data-id="${b._id}" data-bs-toggle="tooltip" title="تحديد هذه النسخة">
+        <strong>نسخة رقم #${index + 1}</strong><br>
+        <small class="text-muted">${dateText} – ${sizeKB} KB</small>
+        <div class="details">📹 فيديوهات: ${videoCount} | 🔗 روابط: ${linkCount} | 🔑 كلمات مرور: ${passCount} | 🗂️ أقسام: ${deptCount}</div>
+      </div>
+      <div class="d-flex gap-2">
+        <a class="btn btn-success btn-sm" href="/api/backups/download/${b._id}" data-bs-toggle="tooltip" title="تنزيل النسخة">⬇️ تنزيل</a>
+        <button class="btn btn-warning btn-sm" onclick="restoreBackup('${b._id}')" data-bs-toggle="tooltip" title="استرجاع النسخة">♻️ استرجاع</button>
+      </div>`;
+    container.appendChild(card);
+  });
+
+  summary.innerHTML = `عدد النسخ: ${backups.length} – الحجم الكلي: ${totalSize.toFixed(2)} KB`;
+}
+
+function toggleSelectAll(source) {
+  document.querySelectorAll('.backup-check').forEach(cb => { cb.checked = source.checked; });
+}
+
+async function deleteSelected() {
+  const selected = [...document.querySelectorAll('.backup-check:checked')];
+  if (selected.length === 0) {
+    showToast("⚠️ يرجى تحديد نسخة واحدة على الأقل", "warning");
+    return;
   }
-  @keyframes glow {
-    from { text-shadow: 0 0 5px #0d6efd, 0 0 10px #0d6efd; }
-    to   { text-shadow: 0 0 15px #0d6efd, 0 0 25px #0d6efd; }
+  showConfirm("هل أنت متأكد من حذف النسخ المحددة؟", async () => {
+    for (let cb of selected) {
+      const id = cb.getAttribute('data-id');
+      await fetch(`/api/backups/${id}`, { method: 'DELETE' });
+    }
+    await fetchBackups();
+    document.getElementById('selectAll').checked = false;
+    showToast("🗑️ تم الحذف بنجاح", "success");
+  });
+}
+
+async function createBackup() {
+  document.getElementById("loadingOverlay").style.display = "flex"; 
+  try {
+    const res = await fetch('/api/backups/create', { method: 'POST' });
+    const result = await res.json();
+    showToast(result.message || '✅ تم إنشاء النسخة الاحتياطية');
+    await fetchBackups();
+  } finally {
+    document.getElementById("loadingOverlay").style.display = "none"; 
   }
-</style>
+}
+
+async function restoreBackup(id) {
+  showConfirm("هل تريد استرجاع هذه النسخة إلى قاعدة البيانات؟", async () => {
+    document.getElementById("loadingOverlay").style.display = "flex"; 
+    try {
+      const res = await fetch(`/api/backups/restore/${id}`, { method: 'POST' });
+      const result = await res.json();
+      showToast(result.message || '♻️ تم استرجاع النسخة الاحتياطية', "info");
+    } finally {
+      document.getElementById("loadingOverlay").style.display = "none"; 
+    }
+  });
+}
+
+document.getElementById("uploadForm").addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const fileInput = document.getElementById("backupFile");
+  if (!fileInput.files.length) {
+    showToast("⚠️ يرجى اختيار ملف JSON أولا", "warning");
+    return;
+  }
+  document.getElementById("loadingOverlay").style.display = "flex"; 
+  const formData = new FormData();
+  formData.append("backupFile", fileInput.files[0]);
+  try {
+    const res = await fetch("/api/backups/upload", { method: "POST", body: formData });
+    const result = await res.json();
+    showToast(result.message || "✅ تم رفع النسخة وحفظها بنجاح");
+    await fetchBackups();
+  } catch {
+    showToast("❌ فشل رفع النسخة", "danger");
+  } finally {
+    document.getElementById("loadingOverlay").style.display = "none"; 
+  }
+});
+
+// ✅ أزرار أعلى الصفحة
+document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
+document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_backups");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
+document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
+
+// ✅ تفعيل Tooltips
+document.addEventListener("DOMContentLoaded", () => {
+  fetchBackups();
+  const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  tooltipTriggerList.forEach(el => {
+    new bootstrap.Tooltip(el, {
+      trigger: 'hover focus',
+      placement: 'top',
+      delay: { show: 300, hide: 150 },
+      customClass: 'custom-tooltip'
+    });
+  });
+});
+</script>
+</body>
+</html>
