--- a/public/backups.html
+++ b/public/backups.html
@@ -56,7 +56,7 @@
     #loadingOverlay {
       position: fixed; top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5);
+      background: linear-gradient(135deg, rgba(13,110,253,0.85), rgba(102,16,242,0.85));
       display: none; align-items: center; justify-content: center; flex-direction: column;
       z-index: 3000; color: #fff; font-size: 1.2rem;
     }
@@ -134,6 +134,17 @@
 <script src="login-guard.js"></script>
 
 <script>
+  // منع الرجوع للصفحة بعد تسجيل الخروج
+if (!sessionStorage.getItem("loggedInAt_backups")) {
+  window.location.replace("index.html");
+}
+
+// تعطيل الكاش عند الرجوع
+window.history.pushState(null, "", window.location.href);
+window.addEventListener("popstate", function () {
+  window.location.replace("index.html");
+});
+
 let backups = [];
 let confirmCallback = null;
 
