--- a/public/backups.html
+++ b/public/backups.html
@@ -296,9 +296,26 @@ document.getElementById("uploadForm").addEventListener("submit", async (e) => {
 });
 
 // ✅ أزرار أعلى الصفحة
-document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
-document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_backups");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
-document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
+document.getElementById("dashboardBtn").addEventListener("click",()=>{
+  window.location.href="dashboard.html";
+});
+
+document.getElementById("logoutBtn").addEventListener("click",()=>{
+  // 🧹 تنظيف الصفحة فورًا
+  document.body.innerHTML = "<h3 style='text-align:center; margin-top:50px;'>تم تسجيل الخروج ✅</h3>";
+  sessionStorage.removeItem("loggedInAt_backups");
+  setTimeout(()=>{ window.location.replace("index.html"); },1500);
+});
+
+document.getElementById("themeToggle").addEventListener("click",()=>{
+  document.body.classList.toggle("dark-mode");
+  const icon=document.querySelector("#themeToggle i");
+  if(document.body.classList.contains("dark-mode")){
+    icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");
+  } else {
+    icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");
+  }
+});
 
 // ✅ تفعيل Tooltips
 document.addEventListener("DOMContentLoaded", () => {
