--- a/public/backups.html
+++ b/public/backups.html
@@ -53,13 +53,15 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.15);
     }
     /* ✅ شاشة التحميل مع تدرج */
-    #loadingOverlay {
-      position: fixed; top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: linear-gradient(135deg, rgba(13,110,253,0.85), rgba(102,16,242,0.85));
-      display: none; align-items: center; justify-content: center; flex-direction: column;
-      z-index: 3000; color: #fff; font-size: 1.2rem;
+   
+
+     #loadingOverlay {
+      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.5); display: none;
+      align-items: center; justify-content: center; flex-direction: column;
+      z-index: 2000; color: #fff; font-size: 1.2rem;
     }
+    
   </style>
 </head>
 <body>
