--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       z-index: 2000; color: #fff; font-size: 1.2rem;
     }
     
-    #loadingOverlay.active { display:block; opacity:1; }
+/*   #loadingOverlay.active { display:block; opacity:1; }  */
 
     #loadingSpinner {
       position:fixed;
