--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,19 @@
     .scrolled {box-shadow:0 4px 12px rgba(0,0,0,0.25)!important;}
 
     /* Spinner + Overlay */
-     #loadingOverlay {
-      position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.5); display: none;
-      align-items: center; justify-content: center; flex-direction: column;
-      z-index: 2000; color: #fff; font-size: 1.2rem;
+      #loadingOverlay {
+      display:none;
+      position:fixed;
+      top:0;
+      left:0;
+      width:100%;
+      height:100%;
+      background:rgba(0,0,0,0.4);
+      z-index:2999;
+      opacity:0;
+      transition:opacity 0.3s ease;
     }
-    
-/*   #loadingOverlay.active { display:block; opacity:1; }  */
+  #loadingOverlay.active { display:block; opacity:1; }  
 
     #loadingSpinner {
       position:fixed;
