--- a/public/passwords.html
+++ b/public/passwords.html
@@ -31,8 +31,8 @@
     /* 🎨 تحسين شكل التولتيب */
     .custom-tooltip.bs-tooltip-auto[x-placement^=top],
     .custom-tooltip.bs-tooltip-top {
-      --bs-tooltip-bg: #0d6efd;  /* خلفية زرقاء */
-      --bs-tooltip-color: #fff;  /* النص أبيض */
+      --bs-tooltip-bg: #0d6efd;
+      --bs-tooltip-color: #fff;
       font-size: 0.85rem;
       padding: 6px 10px;
       border-radius: 8px;
@@ -156,7 +156,7 @@ function showToast(message, type="success") {
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
     </div>`;
   document.getElementById('toastContainer').appendChild(toast);
-  new bootstrap.Toast(toast, { delay: 2500 }).show();
+  new bootstrap.Toast(toast, { delay: 2000 }).show();
 }
 
 function resetZoom() {
@@ -269,7 +269,22 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 });
 
 document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
-document.getElementById("logoutBtn").addEventListener("click",()=>{sessionStorage.removeItem("loggedInAt_passwords");showToast("✅ تم تسجيل الخروج بنجاح","success");setTimeout(()=>{window.location.href="index.html";},1500);});
+
+// ✅ تسجيل الخروج مع إعادة تحميل الصفحة ثم التوجيه مباشرة
+document.addEventListener("DOMContentLoaded", () => {
+  if (sessionStorage.getItem("logoutPending") === "true") {
+    sessionStorage.removeItem("logoutPending");
+    sessionStorage.removeItem("loggedInAt_passwords");
+    showToast("✅ تم تسجيل الخروج بنجاح","success");
+    window.location.href="index.html"; // مباشرة بعد التوست
+  }
+});
+
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  sessionStorage.setItem("logoutPending", "true");
+  location.reload();
+});
+
 document.getElementById("themeToggle").addEventListener("click",()=>{document.body.classList.toggle("dark-mode");const icon=document.querySelector("#themeToggle i");if(document.body.classList.contains("dark-mode")){icon.classList.replace("bi-moon-stars-fill","bi-brightness-high-fill");}else{icon.classList.replace("bi-brightness-high-fill","bi-moon-stars-fill");}});
 
 // ✅ تفعيل جميع الـ Tooltips بشكل احترافي
