--- a/public/passwords.html
+++ b/public/passwords.html
@@ -27,8 +27,6 @@
       z-index: 2000; color: #fff; font-size: 1.2rem;
     }
     #pageContent { display: none; }
-
-    /* 🎨 تحسين شكل التولتيب */
     .custom-tooltip.bs-tooltip-auto[x-placement^=top],
     .custom-tooltip.bs-tooltip-top {
       --bs-tooltip-bg: #0d6efd;
@@ -42,15 +40,12 @@
 </head>
 <body>
 
-<!-- شاشة التحميل -->
 <div id="loadingOverlay">
   <div class="spinner-border text-light" role="status" style="width:3rem; height:3rem;"></div>
   <p class="mt-3"> جاري التحميل...⏳</p>
 </div>
 
-<!-- ✅ محتوى الصفحة -->
 <div id="pageContent">
-
   <div class="d-flex justify-content-between mb-3 mt-3">
     <div>
       <button id="logoutBtn" class="btn btn-danger me-2" data-bs-toggle="tooltip" title="تسجيل الخروج"><i class="bi bi-box-arrow-right"></i></button>
@@ -64,7 +59,6 @@
   <div class="container">
     <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
 
-    <!-- نموذج الإضافة -->
     <div class="password-card">
       <form id="addPasswordForm" class="row g-3">
         <div class="col-md-4">
@@ -85,7 +79,6 @@
       </form>
     </div>
 
-    <!-- الجدول -->
     <div class="table-responsive">
       <table class="table table-bordered table-striped mt-4">
         <thead class="table-dark">
@@ -104,7 +97,6 @@
   </div>
 </div>
 
-<!-- نافذة تعديل -->
 <div class="modal fade" id="editModal" tabindex="-1">
   <div class="modal-dialog"><div class="modal-content">
     <form id="editPasswordForm">
@@ -121,7 +113,6 @@
   </div></div>
 </div>
 
-<!-- نافذة تأكيد الحذف -->
 <div class="modal fade" id="confirmDeleteModal" tabindex="-1">
   <div class="modal-dialog modal-dialog-centered"><div class="modal-content">
     <div class="modal-header bg-danger text-white"><h5 class="modal-title">تأكيد الحذف</h5>
@@ -135,9 +126,7 @@
   </div></div>
 </div>
 
-<!-- Toast -->
 <div class="toast-container" id="toastContainer"></div>
-<!-- نافذة تسجيل الدخول -->
 <div id="loginModalContainer"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -156,7 +145,7 @@ function showToast(message, type="success") {
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
     </div>`;
   document.getElementById('toastContainer').appendChild(toast);
-  new bootstrap.Toast(toast, { delay: 2000 }).show();
+  new bootstrap.Toast(toast, { delay: 1500 }).show(); // 1.5 ثانية
 }
 
 function resetZoom() {
@@ -270,13 +259,13 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 
 document.getElementById("dashboardBtn").addEventListener("click",()=>{window.location.href="dashboard.html";});
 
-// ✅ تسجيل الخروج مع إعادة تحميل الصفحة ثم التوجيه مباشرة
+// ✅ تسجيل الخروج مع إعادة تحميل الصفحة + توست 1.5 ثانية
 document.addEventListener("DOMContentLoaded", () => {
   if (sessionStorage.getItem("logoutPending") === "true") {
     sessionStorage.removeItem("logoutPending");
     sessionStorage.removeItem("loggedInAt_passwords");
     showToast("✅ تم تسجيل الخروج بنجاح","success");
-    window.location.href="index.html"; // مباشرة بعد التوست
+    setTimeout(() => { window.location.href="index.html"; }, 1500);
   }
 });
 
