--- a/public/backups.html
+++ b/public/backups.html
@@ -304,7 +304,7 @@ document.addEventListener("DOMContentLoaded", () => {
     sessionStorage.removeItem("logoutPending");
     sessionStorage.removeItem("loggedInAt_backups");
     showToast("✅ تم تسجيل الخروج بنجاح","success");
-    setTimeout(() => { window.location.href="index.html"; }, 1500);
+    setTimeout(() => { window.location.href="dashboard.html"; }, 1500);
   }
 });
 
