--- a/public/passwords.html
+++ b/public/passwords.html
@@ -265,7 +265,7 @@ document.addEventListener("DOMContentLoaded", () => {
     sessionStorage.removeItem("logoutPending");
     sessionStorage.removeItem("loggedInAt_passwords");
     showToast("✅ تم تسجيل الخروج بنجاح","success");
-    setTimeout(() => { window.location.href="index.html"; }, 1500);
+    setTimeout(() => { window.location.href="dashboard.html"; }, 1500);
   }
 });
 
