--- a/public/edit.html
+++ b/public/edit.html
@@ -171,7 +171,7 @@ document.addEventListener("DOMContentLoaded", () => {
   if (sessionStorage.getItem("logoutPending") === "true") {
     sessionStorage.removeItem("logoutPending");
     sessionStorage.removeItem("loggedInAt_edit");
-    showToast("✅ تم تسجيل الخروج بنجاح","success");
+    showToast("تم تسجيل الخروج بنجاح","success");
     setTimeout(() => { window.location.href="index.html"; }, 1500);
   }
 });
