--- a/public/add.html
+++ b/public/add.html
@@ -171,7 +171,7 @@ document.addEventListener("DOMContentLoaded", () => {
     sessionStorage.removeItem("logoutPending");
     sessionStorage.removeItem("loggedInAt_add");
     showToast("✅ تم تسجيل الخروج بنجاح","success");
-    setTimeout(() => { window.location.href="index.html"; }, 1500);
+    setTimeout(() => { window.location.href="dashboard.html"; }, 1500);
   }
 });
 document.getElementById("logoutBtn").addEventListener("click", () => {
